# centaur-music

./: .gitignore  AGENTS.md  FUTURE.md  LICENSE  Makefile  README.md  WiP.md  inspirations_and_ideas.md  main.py  pyproject.toml  pyrightconfig.json  synth.py
code_musics/: __init__.py  analysis.py  automation.py  composition.py  drum_helpers.py  eval_rubric.py  evaluate.py  harmonic_drift.py  humanize.py  inspection.py  inspire.py  meter.py  midi_export.py  midi_export_stems.py  midi_export_tuning.py  midi_export_types.py  midi_import.py  modulation.py  pitch_motion.py  render.py  score.py  smear.py  spectra.py  stem_export.py  stem_export_types.py  synth.py  tuning.py  viz_export.py
code_musics/engines/: __init__.py  _ad2_utils.py  _chaotic.py  _drum_layers.py  _drum_macros.py  _drum_utils.py  _dsp_utils.py  _envelopes.py  _fdn_reverb.py  _filters.py  _granular.py  _instrumentation.py  _metallic_hat.py  _modal.py  _mpe_utils.py  _oscillators.py  _pi_macros.py  _pluck.py  _scanned.py  _spectral_morphs.py  _sustained_exciters.py  _synth_macros.py  _synth_slots.py  _voice_dist.py  _waveshaper.py  additive.py  clap.py  drum_voice.py  filtered_stack.py  fm.py  harpsichord.py  kick_tom.py  metallic_perc.py  noise_perc.py  organ.py  piano.py  piano_additive.py  polyblep.py  registry.py  sample.py  (+5 more)
code_musics/generative/: __init__.py  _rng.py  aksak.py  ca_rhythm.py  cloud.py  euclidean.py  lattice.py  markov.py  mutation.py  prob_gate.py  prob_rhythm.py  tone_pool.py  turing.py
code_musics/pieces/: __init__.py  _shared.py  additive_studies.py  amber_room.py  analog_filter_bus_study.py  anneal.py  aphotic.py  aphotic_audition.py  beating_light.py  bell_pulse.py  (+63 more)
docs/: analysis_workflows.md  composition_api.md  midi_export.md  score_api.md  stem_export.md  synth_api.md  viz_api.md
output/: 02_chord_4567.analysis.json  17_ji_chorale.analysis.json  17_ji_chorale.comparison.json  17_ji_chorale.render.json  19_ji_comma_drift.analysis.json  20_ji_spiral_steps.render.json  20_sketch_articulation_study.analysis.json  21_composition_tools_showcase.analysis.json  21_composition_tools_showcase.render.json  21_septimal_changes.render.json  22_composition_tools_consonant.analysis.json  22_composition_tools_consonant.render.json  22_giant_steps_15edo.render.json  23_effects_showcase.render.json  eval_log.jsonl
scratch/: pure_states_refinements.md
scripts/: benchmark_render_modes.py  convert_liquidsonics_irs.py  coverage_summary.py  fetch_midi_references.py  profile_render_memory.py  render_hat_audition.py  viz_setup.sh
sketches/: 01_septimal.py
tests/: _dsp_test_utils.py  _filter_params_migration_baseline.json  test_analog_character.py  test_analog_helpers.py  test_analysis.py  test_analysis_comparison.py  test_auto_cal_compressor.py  test_auto_cal_drive.py  test_auto_cal_limiter.py  test_bbd_chorus.py  test_blend_coefficient.py  test_chaotic.py  test_choke_groups.py  test_clipper.py  test_composition.py  test_creative_presets.py  test_cutoff_drift.py  test_digital_shaper.py  test_drift_bus.py  test_drive_multiband.py  test_drum_helpers.py  test_drum_kernels_md.py  test_drum_macros.py  test_drum_md_presets_smoke.py  test_drum_sample_ext.py  test_drum_utils.py  test_drum_voice_new_types.py  test_drum_voice_presets.py  test_dsp_utils.py  test_effects_analog_filter.py  test_effects_new.py  test_engine_clap.py  test_engine_drum_voice.py  test_engine_filtered_stack.py  test_engine_fm.py  test_engine_kick_tom.py  test_engine_metallic_perc.py  test_engine_noise_perc.py  test_engine_organ.py  test_engine_piano.py  (+94 more)
viz/: capture.py
(+108 files in other folders)
