[project]
name = "centaur-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mido>=1.3.3",
    "numpy>=2.4.3",
    "pedalboard>=0.9.22",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "librosa>=0.10.2",
    "numba>=0.65.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]
ignore = [
    "E501",
]

[tool.pytest.ini_options]
addopts = "--durations=10"
