[project]
name = "centaur-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mido>=1.3.3",
    "numpy>=2.4.3",
    "pedalboard>=0.9.22",
    "scipy>=1.17.1",
    "soundfile>=0.13.1",
    "librosa>=0.10.2",
    "numba>=0.65.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "SIM",
    "UP",
]
ignore = [
    "E501",
]

[tool.ty.rules]
# The ModSource base class in code_musics/modulation.py uses leading-
# underscore placeholder names (_times, _context) in its default
# NotImplementedError stub to mark them as unused in the base.  Every
# concrete subclass (LFOSource, OscillatorSource, EnvelopeSource,
# MacroSource, VelocitySource, RandomSource, ConstantSource,
# DriftAdapter, ChaoticSource) legitimately names the same positional
# parameters without underscores.  ty reads the renaming as a Liskov
# violation even though runtime behavior is correct.  Tracked in
# FUTURE.md under "Modulation source base signature"; silencing here
# keeps the linter hook actionable.
invalid-method-override = "ignore"

[tool.pytest.ini_options]
addopts = ""

[tool.coverage.run]
source = ["code_musics", "main"]
branch = false
omit = [
    "code_musics/pieces/*",
    "code_musics/evaluate.py",
    "code_musics/inspire.py",
    "*/__pycache__/*",
    "*/tests/*",
]

[tool.coverage.report]
skip_covered = true
skip_empty = true
precision = 1
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

[tool.uv]
# Pin dependency resolution to the era of the committed uv.lock.  The lock
# was originally created with an UV_EXCLUDE_NEWER env cutoff; without this
# setting uv discards the lockfile and re-resolves to latest on every run.
exclude-newer = "2026-04-14T15:12:44.50289Z"
